--- a/Domain/Domain.csproj
+++ b/Domain/Domain.csproj
@@ -32,6 +32,40 @@
   <ItemGroup>
     <Compile Include="MyClass.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Common\EntityBase.cs" />
+    <Compile Include="Common\IAggregate.cs" />
+    <Compile Include="Common\ValueObjectBase.cs" />
+    <Compile Include="Common\IDomainEvent.cs" />
+    <Compile Include="Common\CommandBase.cs" />
+    <Compile Include="Account\Account.cs" />
+    <Compile Include="Common\ICommandHandler.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Instruction\" />
+    <Folder Include="Order\" />
+    <Folder Include="Customer\" />
+    <Folder Include="Account\" />
+    <Folder Include="OrderStatus\" />
+    <Folder Include="Balance\" />
+    <Folder Include="Instrument\" />
+    <Folder Include="BuySell\" />
+    <Folder Include="Account\Event\" />
+    <Folder Include="Account\Command\" />
+    <Folder Include="Balance\Command\" />
+    <Folder Include="Balance\Event\" />
+    <Folder Include="BuySell\Command\" />
+    <Folder Include="BuySell\Event\" />
+    <Folder Include="Customer\Command\" />
+    <Folder Include="Customer\Event\" />
+    <Folder Include="Instruction\Command\" />
+    <Folder Include="Instruction\Event\" />
+    <Folder Include="Instrument\Command\" />
+    <Folder Include="Instrument\Event\" />
+    <Folder Include="OrderStatus\Command\" />
+    <Folder Include="OrderStatus\Event\" />
+    <Folder Include="Order\Command\" />
+    <Folder Include="Order\Event\" />
+    <Folder Include="Common\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
