--- a/Service/Service.csproj
+++ b/Service/Service.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net47</TargetFramework>
+    <TargetFramework>netcoreapp2.2</TargetFramework>
     <AssemblyTitle>Service</AssemblyTitle>
     <Copyright>${AuthorCopyright}</Copyright>
     <AssemblyVersion>1.0.*</AssemblyVersion>
